CODETOOLS-7903117: Remove JCov support from jtreg